--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,27 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-sudo: false
+Language: R
 cache: packages
+sudo: true
+dist: trusty
+warnings_are_errors: false
+
+r:
+  - devel
+  - oldrel
+  - release
+
+env:
+  
+before_install:
+# make sure R pkgs are upt-to-date
+  - Rscript -e 'update.packages(ask = FALSE)'
+
+# work around temporary travis + R 3.5 bug
+r_packages: devtools  
+
+# temporary: needed for plotly input testing in shiny 
+r_github_packages: 
+  - rstudio/shinytest
+#lintr for static R code analysis and coding style adherence
+  - jimhester/lintr
